--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "ccenv",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "bin": {
-    "ccenv": "./src/ccenv.ts"
-  },
-  "scripts": {
-    "ccenv": "bun ./src/ccenv.ts"
-  }
+	"name": "ccenv",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"bin": {
+		"ccenv": "./src/ccenv.ts"
+	},
+	"scripts": {
+		"ccenv": "bun ./src/ccenv.ts",
+		"check": "biome check .",
+		"format": "biome format --write .",
+		"lint": "biome lint ."
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.3.11",
+		"@types/bun": "^1.3.5",
+		"@types/node": "^25.0.3"
+	}
 }
